Update contact email and improve site symmetry
- Changed contact email from ciftlikcialperen@gmail.com to photogenicai.app@gmail.com
- Centered header text for better symmetry
- Added max-width to sections for consistent layout
- Centered all h2 headings
- Improved overall visual balance and alignment

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="container">
                 <h2>Support</h2>
                 <p>Need help? Contact us:</p>
-                <p><a href="mailto:ciftlikcialperen@gmail.com">ciftlikcialperen@gmail.com</a></p>
+                <p><a href="mailto:photogenicai.app@gmail.com">photogenicai.app@gmail.com</a></p>
             </div>
         </section>
     </main>
