--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -91,7 +91,7 @@
 
                 <h3>11. Contact Us</h3>
                 <p>If you have questions about this privacy policy, please contact us:</p>
-                <p><strong>Email:</strong> <a href="mailto:ciftlikcialperen@gmail.com">ciftlikcialperen@gmail.com</a></p>
+                <p><strong>Email:</strong> <a href="mailto:photogenicai.app@gmail.com">photogenicai.app@gmail.com</a></p>
 
                 <h3>12. Consent</h3>
                 <p>By using Photogenic, you consent to this privacy policy.</p>
